update version number to v1.1 for Urban TEP code freeze

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bc.tep</groupId>
     <artifactId>urban-tep</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <dependencies>
         <dependency>
@@ -16,6 +16,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
