--- a/src/main/resources/conf/utep-wps.properties
+++ b/src/main/resources/conf/utep-wps.properties
@@ -1,7 +1,7 @@
 ############################
 # WPS Provider information #
 ############################
-company.name=Brockmann-Consult
+company.name=Brockmann Consult GmbH
 company.website=http://www.brockmann-consult.de
 company.address=Max-Planck-Str. 2
 company.city=Geesthacht
@@ -15,19 +15,57 @@ company.service.hours=24x7
 company.contact.instruction=Don't hesitate to call
 project.manager.name=Dr. Martin Boettcher
 project.manager.position.name=Project Manager
-wps.service.id=LC CCI WPS server
-wps.service.abstract=Web Processing Service for LC CCI User Toolbox
+wps.service.id=Calvalus WPS server
+wps.service.abstract=Web Processing Service for Calvalus
 wps.service.type=WPS
 wps.version=1.0.0
 wps.default.lang=EN
 wps.supported.lang=EN
-wps.get.request.url=http://www.brockmann-consult.de/bc-wps/wps/utep?
-wps.post.request.url=http://www.brockmann-consult.de/bc-wps/wps/utep
+wps.get.request.url=http://www.brockmann-consult.de/bc-wps/wps/calvalus?
+wps.post.request.url=http://www.brockmann-consult.de/bc-wps/wps/calvalus
+wps.l3.parameters.schema.location=http://www.brockmann-consult.de/calwps/calwpsL3Parameters-schema.xsd
 
 ######################
 # System information #
 ######################
 wps.application.path=/webapps/bc-wps
 wps.application.name=bc-wps
+default.beam.bundle=snap-4.0.0
+default.snap.bundle=snap-4.0.0
+default.calvalus.bundle=calvalus-2.9
+staging.directory=staging
+metadata.template=metadata-template.vm
+default.cmd.timeout=5000
+ldap.allowed.group=calwps
+ldap.server.name=calwps-admin@auth
+ldap.ssh.key=/home/tomcat/.ssh/id_rsa
+remote.user.key=remote_user
+remote.ref.key=remote_ref
+remote.user.prefix=tep_
+
+################################
+# UTEP local process variables #
+################################
 utep.input.directory=utep_input
-utep.output.directory=utep_output
+utep.output.directory=staging
+utep.descriptor.directory=/local-process-descriptor
+
+######################
+# Local DB variables #
+######################
+local.db.name=local-database
+jdbc.url.prefix=jdbc:hsqldb:file:
+jdbc.driver=org.hsqldb.jdbcDriver
+
+########################
+# Reporting parameters #
+########################
+wps.reporting.db.path = /opt/tomcat/data/bc-wps
+wps.reporting.status.uri = www.brockmann-consult.de/bc-wps/wps/calvalus
+
+wps.reporting.initial.CPU_MILLISECONDS = 60000
+wps.reporting.initial.PHYSICAL_MEMORY_BYTES = 6000000000
+wps.reporting.initial.BYTE_READ = 2000000
+wps.reporting.initial.BYTE_WRITTEN = 8000000
+wps.reporting.initial.PROC_INSTANCE = 11
+wps.reporting.initial.NUM_REQ = 3
